Move source code to right aside, fix no gap between left aside and article on >=1700px viewports

--- a/static/style.css
+++ b/static/style.css
@@ -43,24 +43,27 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
-aside.left {
-	font-size: 14px;
+aside {
 	max-width: calc(8.75% + 160px);
 	min-width: calc(8.75% + 160px);
 	line-height: 21px;
 	overflow: auto;
-	height: 100vh;
-	position: fixed !important;
+	position: fixed;
 }
 
-aside.left ul {
+aside.left {
+	font-size: 14px;
+	height: 100vh;
+}
+
+aside ul {
 	display: flex;
 	flex-direction: column;
 	list-style: none;
 	padding: 0 10px 10px 10px;
 }
 
-aside.left ul li a {
+aside ul li a {
 	padding: 10px;
 	width: calc(100% - 20px);
 	color: var(--text-color);
@@ -68,7 +71,7 @@ aside.left ul li a {
 	display: inline-block;
 }
 
-aside.left ul li:hover a {
+aside ul li:hover a {
 	font-weight: 600;
 	background-color: var(--pre-bg-color);
 	border-radius: 10px;
@@ -79,13 +82,23 @@ aside.left ul li.currentpage a {
 	text-decoration: none;
 }
 
-aside.left h2 {
+aside h2 {
 	font-size: 1.3em;
+}
+
+aside.right {
+	right: 0;
+	top: 0;
+	text-align: center;
 }
 
 a {
 	color: var(--accent-color);
 	text-decoration: underline;
+}
+
+a:hover {
+	text-decoration: none;
 }
 
 a:visited {
@@ -145,10 +158,6 @@ hr {
 	color: var(--border-color);
 }
 
-footer {
-	text-align: center;
-}
-
 
 
 
@@ -169,6 +178,12 @@ footer {
 
 	aside.left ul {
 		display: none;
+	}
+
+	aside.right {
+		display: block;
+		position: static;
+		max-width: 100vw;
 	}
 
 	label {
@@ -203,7 +218,7 @@ footer {
 		min-width: calc(100% - 600px);
 	}
 
-	aside.left {
+	aside {
 		max-width: calc(300px - 1%);
 		min-width: calc(300px - 1%);
 	}
@@ -220,10 +235,15 @@ footer {
 		max-width: 1047px;
 		min-width: 1047px;
 	}
-	aside.left {
-		right: calc(50% + 1047px * 0.5);
+	aside {
 		max-width: 325px;
 		min-width: 325px;
+	}
+	aside.left {
+		right: calc(50% + 1067px * 0.5);
+	}
+	aside.right {
+		left: calc(50% + 1067px * 0.5);
 	}
 }
 
